--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ img {
 .nav {
   width: 15%;
   min-width: 140px;
-  color: #FFCFCF;
+  color: #CC0156;
   padding-top: 55px;
   padding-right: 30px;
   text-align: center;
@@ -56,7 +56,7 @@ ul {
   width: 85%;
   min-height: 750px;
   min-width: 600px;
-  background-color: #FFCFCF;
+  background-color: #CC0156;
 }
 
 .main h1 {
